This file lists interface changes that might affect users in 2.2.0, some
known problems in LyX 2.2.0 and some things you have to take into account
when upgrading from earlier versions to a version of the 2.2.x series.


Interface changes
-----------------



The following pref variables were added in 2.2:



The following pref variables were changed in 2.2:



The following pref variables are obsoleted in 2.2:

- \\rtl
  This variable was introduced to guard against any bad consequence of
  the then-new right-to-left languages support. It is no longer needed
  because of improvements. Now right-to-left support is always enabled.


The following new LyX functions have been introduced in 2.2:



The following LyX functions have been changed in 2.2:



The following LyX key bindings have been changed in 2.2:



The following LyX documents have been moved in 2.2:



The following metadata files have been added to the tarball in 2.2:



Changes with respect to external programs and libraries in 2.2:
--------------------------------------------------------


- LyX is not yet supposed to work with Qt5. It is advised to compile and 
  run LyX against Qt 4.8.x. On Windows, Qt 4.8.5 suffers from a bug that 
  breaks the use of shortcuts, so on Windows Qt 4.8.4 is advised.

- LyX now gives an error if the underlying LaTeX command exited with error.


Known issues in version 2.2.0
-----------------------------

- LyX needs to be run under Python 2 and will not work properly on systems
  where Python 3 is the default binary. See bug #7030 to know how to fix
  this properly, since simple sheebang conversion in *.py files will not
  be enough.


Caveats when upgrading from earlier versions to 2.2.x
-------------------------------------------------------
